Add illustrations and text to the page, progressing it further.
Added content 2  and content 3

--- a/index.html
+++ b/index.html
@@ -15,10 +15,60 @@
         <li><a class="link">Link Three</a></li>
       </ul>
     </div>
-    <div class="content"></div>
-    <div class="content"></div>
-    <div class="content"></div>
-    <div class="content"></div>
+    <div class="content 1">
+      <div class="text">
+        <p class="title">This Website is awesome</p>
+        <p class="title">
+          This website has some sub-text that goes here under the main title.
+          It's a smaller form and the color is lower contrast.
+        </p>
+        <div class="sign">
+          <button class="sign-up">Sign Up</button>
+          <button class="sign-in">Sign In</button>
+        </div>
+      </div>
+      <img src="./images/download.jpeg" />
+      <h6>
+        image by<a
+          href="https://www.pexels.com/photo/businessman-looking-at-papers-5439376/"
+          >Pexels</a
+        >
+      </h6>
+    </div>
+    <div class="content 2">
+      <p>Some Random Information</p>
+      <div class="illustration">
+        <img src="images/illustration.jpeg" />This is some subtext under an
+        illustration.
+      </div>
+      <div class="illustration">
+        <img src="images/illustration.jpeg" />This is some subtext under an
+        illustration.
+      </div>
+      <div class="illustration">
+        <img src="images/illustration.jpeg" />This is some subtext under an
+        illustration.
+      </div>
+      <div class="illustration">
+        <img src="images/illustration.jpeg" />This is some subtext under an
+        illustration.
+      </div>
+    </div>
+    <div class="content 3">
+      <p>
+        This is an inspiring quote or a testimonial from a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
+      </p>
+      <p>-Thor, God of Thunder</p>
+    </div>
+    <div class="content 4">
+      <div class="text">
+        <p>Call to action! It's time!</p>
+        <p>Sign up for our product by clicking that button over there!</p>
+      </div>
+      <button>Sign Up/Sign In</button>
+    </div>
     <div class="footer"></div>
   </body>
 </html>
