Properly name classes
Fixed an oversight because of which content a,b,c and d were named 1,2,3 and 4

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
-    <link href="stylesheet.css" />
+    <link rel="stylesheet" href="stylesheet.css" />
   </head>
   <body>
     <div class="header">
@@ -15,7 +15,7 @@
         <li><a class="link">Link Three</a></li>
       </ul>
     </div>
-    <div class="content 1">
+    <div class="content a">
       <div class="text">
         <p class="title">This Website is awesome</p>
         <p class="title">
@@ -35,7 +35,7 @@
         >
       </h6>
     </div>
-    <div class="content 2">
+    <div class="content b">
       <p>Some Random Information</p>
       <div class="illustration">
         <img src="images/illustration.jpeg" />This is some subtext under an
@@ -54,7 +54,7 @@
         illustration.
       </div>
     </div>
-    <div class="content 3">
+    <div class="content c">
       <p>
         This is an inspiring quote or a testimonial from a customer. Maybe it's
         just filling up space, or maybe people will actually read it. Who knows?
@@ -62,13 +62,13 @@
       </p>
       <p>-Thor, God of Thunder</p>
     </div>
-    <div class="content 4">
+    <div class="content d">
       <div class="text">
         <p>Call to action! It's time!</p>
         <p>Sign up for our product by clicking that button over there!</p>
       </div>
       <button>Sign Up/Sign In</button>
     </div>
-    <div class="footer"></div>
+    <div class="footer">Copyright &copy; The Odin Project 2021</div>
   </body>
 </html>
