--- a/index.html
+++ b/index.html
@@ -41,31 +41,33 @@
         </div>
       </div>
       <div class="b">
-        <p>Some Random Information</p>
-        <div class="illustration">
-          <img src="images/illustration.jpeg" />This is some subtext under an
-          illustration.
-        </div>
-        <div class="illustration">
-          <img src="images/illustration.jpeg" />This is some subtext under an
-          illustration.
-        </div>
-        <div class="illustration">
-          <img src="images/illustration.jpeg" />This is some subtext under an
-          illustration.
-        </div>
-        <div class="illustration">
-          <img src="images/illustration.jpeg" />This is some subtext under an
-          illustration.
+        <p class="text">Some Random Information</p>
+        <div class="sub-text">
+          <div class="illustration">
+            <img src="images/illustration.jpeg" />
+            <p>This is some subtext under an illustration.</p>
+          </div>
+          <div class="illustration">
+            <img src="images/illustration.jpeg" />
+            <p>This is some subtext under an illustration.</p>
+          </div>
+          <div class="illustration">
+            <img src="images/illustration.jpeg" />
+            <p>This is some subtext under an illustration.</p>
+          </div>
+          <div class="illustration">
+            <img src="images/illustration.jpeg" />
+            <p>This is some subtext under an illustration.</p>
+          </div>
         </div>
       </div>
       <div class="c">
-        <p>
+        <p class="quote">
           This is an inspiring quote or a testimonial from a customer. Maybe
           it's just filling up space, or maybe people will actually read it. Who
           knows? All I know is that it looks nice.
         </p>
-        <p>-Thor, God of Thunder</p>
+        <p class="thor">-Thor, God of Thunder</p>
       </div>
       <div class="d">
         <div class="text">
