Complete the second the project Landing Page

--- a/index.html
+++ b/index.html
@@ -70,11 +70,13 @@
         <p class="thor">-Thor, God of Thunder</p>
       </div>
       <div class="d">
-        <div class="text">
-          <p>Call to action! It's time!</p>
-          <p>Sign up for our product by clicking that button over there!</p>
+        <div class="blues">
+          <div class="text">
+            <p class="head">Call to action! It's time!</p>
+            <p>Sign up for our product by clicking that button over there!</p>
+          </div>
+          <button>Sign Up/Sign In</button>
         </div>
-        <button>Sign Up/Sign In</button>
       </div>
     </div>
     <div class="footer">Copyright &copy; The Odin Project 2021</div>
