--- a/sorry.html
+++ b/sorry.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sorry</title>
+    <link rel="stylesheet" href="sorry.css" />
   </head>
   <body>
     <p>
